<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="app_name">SetupWizardCommon</string>
    <string name="setup_wizard_title">Setup Wizard</string>
    <string name="setup_wizard_next_button_label">Next</string>
    <string name="setup_wizard_back_button_label">Back</string>
    <string name="setup_wizard_services_activity_title">Google services</string>
    <string name="setup_wizard_services_backup_restore_heading">Backup &amp; restore</string>
    <string name="setup_wizard_services_location_heading">Location</string>
    <string name="setup_wizard_services_communication_heading">Communication</string>
    <string name="setup_wizard_services_backup">Back up data to your Google Account.</string>
    <string name="setup_wizard_services_backup_restore">Back up your data to a Google Account. Restore previous backups to this device.</string>
    <string name="setup_wizard_services_backup_restore_footnote">Data includes apps, app settings, system settings, and Wi‑Fi passwords.</string>
    <string name="setup_wizard_services_location_sharing">Let apps better determine your location. Anonymous location data will be collected and sent to Google.</string>
    <string name="setup_wizard_services_location_wifi_scan">For improved accuracy and other purposes, scan for Wi‑Fi networks, even when Wi‑Fi is off.</string>
    <string name="setup_wizard_services_location_footnote">"Google's location service uses Wi‑Fi and other signals to determine location more precisely and quickly, often with lower power usage than GPS. Some data may be stored on your device. Data may be collected even when no apps are running."</string>
    <string name="setup_wizard_services_play">Keep me up to date with news and offers from Google Play.</string>
    <string name="sharedUserLabel">Google Services</string>
    <string name="app_label">Google Account Manager</string>
    <string name="gls_label">Google</string>
    <string name="default_device_name">Android</string>
    <string name="down_button_label">More</string>
    <string name="sign_in_button_label">Sign in</string>
    <string name="create_button_label">Get an account</string>
    <string name="not_now_button_label">Not now</string>
    <string name="skip_button_label">Skip</string>
    <string name="new_button_label">New</string>
    <string name="existing_button_label">Existing</string>
    <string name="first_name">First</string>
    <string name="last_name">Last</string>
    <string name="gmail_host_name">\@gmail.com</string>
    <string name="done">OK</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="try_again_button_label">Try again</string>
    <string name="close_button_label">Close</string>
    <string name="edit_text_help">Touch any text box to start typing</string>
    <string name="add_a_google_account">Add a Google Account</string>
    <string name="captcha_title">Need to Enter CAPTCHA</string>
    <string name="show_error_title">Error</string>
    <string name="server_error">There was a problem communicating with Google servers.</string>
    <string name="server_error_help">Try again later.</string>
    <string name="network_unreliable">"Can't establish a reliable connection to the server."</string>
    <string name="network_unreliable_help">This could be a temporary problem or your Android device may not be provisioned for data services. If it continues, call Customer Care.</string>
    <string name="network_unreliable_help_wifi_only">This could be a temporary problem. Try again or connect to another Wi-Fi network.</string>
    <string name="invalid_login_character">Invalid character. Only 0-9, a-z, A-Z, and periods are allowed.</string>
    <string name="invalid_password_character">Invalid password character.</string>
    <string name="cant_be_blank">"Field can't be blank."</string>
    <string name="calendar">Google Calendar</string>
    <string name="talk">Google Talk</string>
    <string name="email">Google Mail</string>
    <string name="url_load_unsuccessful_message">"Your Android device isn't connected to a data service. To view this information now, visit %s with a web browser."</string>
    <string name="url_load_unsuccessful_message_wifi_only">"Your Android device isn't connected to a Wi-Fi network. To view this information now, visit %s with a web browser."</string>
    <string name="field_cant_be_blank">"Field can't be blank."</string>
    <string name="plus_query_title">Upgrade to Google+</string>
    <string name="plus_query_text">Google+ makes sharing on the web more like real-life sharing.</string>
    <string name="circles_subtitle">"A stream of stuff you're into"</string>
    <string name="circles_text">Connect with close friends and explore common interests.</string>
    <string name="uploads_subtitle">Automatic photo backup</string>
    <string name="uploads_text">Back up photos as you take them, with free and private storage.</string>
    <string name="huddle_subtitle">Video calling &amp; messaging</string>
    <string name="huddle_text">Enjoy texting, photos, and free group video calls with Hangouts.</string>
    <string name="plus_declined_button_label">Not now</string>
    <string name="plus_accepted_button_label">Get started</string>
    <string name="plus_name_check_title">Contacting Google+…</string>
    <string name="plus_name_check_text">This can take a few minutes.</string>
    <string name="plus_faq_title">Welcome to Google+!</string>
    <string name="plus_faq_text" formatted="false">"On Google+, you'll have a public profile to help your friends find you online. Anyone who knows your email address can find and view your profile.

You can use +1 buttons throughout the web to recommend things to the world. Your profile and +1's will appear publicly in search, on ads, and across the web.

For now, your profile will show just your name (%s %s). You can add a photo, bio, and other details later when you start using Google+."</string>
    <string name="dasher_warning">The administrator at %s owns and manages all your data on Google+ and can delete or modify your profile at any time without your permission.</string>
    <string name="profile_info_title">Your profile</string>
    <string name="profile_text">Provide some basic information for your profile. You can add a photo and other details later when you start using Google+.</string>
    <string name="occupation">Occupation</string>
    <string name="current_city">Current city</string>
    <string name="picassa_info_title">Picasa and Google+</string>
    <string name="picassa_info_text" formatted="false">"Your photos and videos on Picasa Web Albums will be available on Google+ and your comments will be by %s %s instead of %s. When you share photos on Google+, recipients can reshare them with anyone else. Your albums' visibility settings won't change, and you can limit them at any time so they can't be reshared freely."</string>
    <string name="name_title">Your name</string>
    <string name="name_title_plus">Your Google+ name</string>
    <string name="photo_title">Your photo</string>
    <string name="photo_text">This photo will be used in your contact record. You can change it later in the People app.</string>
    <string name="photo_button_label">Take photo</string>
    <string name="photo_description">Your photo</string>
    <string name="create_google_account">Choose username</string>
    <string name="create_google_account_text">Your Google Account comes with Gmail, email from Google. It works on any device, blocks spam, and much more.</string>
    <string name="is_not_available">The username <b>^1</b>" isn't available."</string>
    <string name="suggestions_hint">Touch for suggestions</string>
    <string name="suggest_username_next_button_label">Change username</string>
    <string name="security_questions_title">Security questions</string>
    <string name="answer">" "<b>Answer</b>" "</string>
    <string name="account_pre_intro_title">Got Google?</string>
    <string name="account_pre_intro_default_message">"Do you have a Google Account?

If you use Gmail or Google Apps, answer Yes."</string>
    <string name="account_pre_intro_yes">Yes</string>
    <string name="account_pre_intro_no">No</string>
    <string name="recovery_title">Google password recovery</string>
    <string name="secondary_email_hint">Backup email</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="account_recovery_info">If you ever lose your password, you can answer a security question and have a reset link emailed to a different address.</string>
    <string name="secondary_email_label">Recovery email address</string>
    <string name="username">Email</string>
</resources>