<?xml version="1.0" encoding="utf-8"?>
<view android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.google.android.gsf.login.ProportionalOuterFrame"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="bottom" android:id="@id/title_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/setup_wizard_title_height" android:text="@string/photo_title" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true" style="@style/setup_wizard_title" />
        <View android:id="@id/top_divider" android:layout_below="@id/title" style="@style/setup_wizard_top_divider" />
    </RelativeLayout>
    <com.google.android.gsf.login.BottomScrollView android:id="@id/bottom_scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/next_button">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/input_field_vmargins" android:layout_below="@id/title_area">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/photo" android:layout_width="@dimen/photo_width" android:layout_height="@dimen/photo_width" android:layout_marginRight="@dimen/photo_margin_top" android:src="@drawable/empty_photo" android:scaleType="fitCenter" android:layout_alignParentTop="true" android:contentDescription="@string/photo_description" android:layout_marginEnd="@dimen/photo_margin_top" />
                <Button android:id="@id/photo_button" android:layout_width="@dimen/photo_width" android:text="@string/photo_button_label" android:layout_below="@id/photo" android:layout_centerHorizontal="true" style="@style/setup_wizard_button" />
            </RelativeLayout>
            <TextView android:id="@id/description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/photo_text" android:layout_weight="1.0" style="@style/setup_wizard_description_text" />
        </LinearLayout>
    </com.google.android.gsf.login.BottomScrollView>
    <Button android:id="@id/back_button" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/setup_wizard_back_button_label" android:layout_alignParentStart="true" style="@style/setup_wizard_back_button" />
    <Button android:id="@id/next_button" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/setup_wizard_next_button_label" android:layout_alignParentEnd="true" style="@style/setup_wizard_next_button" />
</view>