<?xml version="1.0" encoding="utf-8"?>
<view android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.google.android.gsf.login.ProportionalOuterFrame"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="bottom" android:id="@id/title_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:gravity="bottom" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plus_query_title" style="@style/setup_wizard_title" />
        <View android:id="@id/top_divider" android:layout_below="@id/title" style="@style/setup_wizard_top_divider" />
    </RelativeLayout>
    <ScrollView style="@style/StackButtonedContent">
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/plus_query_item_spacing" android:stretchColumns="1" android:shrinkColumns="1">
            <TableRow>
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginRight="20.0dip" android:src="@drawable/ic_gplus_color_48" android:contentDescription="@null" android:layout_marginEnd="20.0dip" />
                <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@id/circles_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/circles_subtitle" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:fontFamily="sans-serif" android:layout_alignParentStart="true" style="@style/setup_wizard_text" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/circles_text" android:layout_below="@id/circles_subtitle" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" style="@style/setup_wizard_text" />
                </RelativeLayout>
            </TableRow>
            <TableRow android:layout_marginTop="@dimen/plus_query_item_spacing">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginRight="20.0dip" android:src="@drawable/ic_photos_color_48" android:contentDescription="@null" android:layout_marginEnd="20.0dip" />
                <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@id/uploads_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uploads_subtitle" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:fontFamily="sans-serif" android:layout_alignParentStart="true" style="@style/setup_wizard_text" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uploads_text" android:layout_below="@id/uploads_subtitle" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" style="@style/setup_wizard_text" />
                </RelativeLayout>
            </TableRow>
            <TableRow android:layout_marginTop="@dimen/plus_query_item_spacing">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginRight="20.0dip" android:src="@drawable/ic_hangouts_color_48" android:contentDescription="@null" android:layout_marginEnd="20.0dip" />
                <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@id/huddle_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/huddle_subtitle" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:fontFamily="sans-serif" android:layout_alignParentStart="true" style="@style/setup_wizard_text" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/huddle_text" android:layout_below="@id/huddle_subtitle" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" style="@style/setup_wizard_text" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <LinearLayout android:id="@id/buttons" style="@style/StackedButtons">
        <Button android:id="@id/next_button" android:layout_width="fill_parent" android:text="@string/plus_accepted_button_label" style="@style/setup_wizard_button" />
        <Button android:id="@id/skip_button" android:layout_width="fill_parent" android:text="@string/plus_declined_button_label" style="@style/setup_wizard_button" />
    </LinearLayout>
</view>