<?xml version="1.0" encoding="utf-8"?>
<view android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.google.android.gsf.login.ProportionalOuterFrame"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="bottom" android:id="@id/title_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:gravity="bottom" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/recovery_title" style="@style/setup_wizard_title" />
        <View android:id="@id/top_divider" android:layout_below="@id/title" style="@style/setup_wizard_top_divider" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/buttons" android:layout_below="@id/title_area">
        <View style="@style/InputFieldSideView" />
        <com.google.android.gsf.login.BottomScrollView android:id="@id/bottom_scroll_view" android:layout_marginTop="@dimen/input_field_vmargins" android:layout_centerHorizontal="true" style="@style/InputFieldView">
            <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:gravity="start|center" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginBottom="8.0dip" android:text="@string/account_recovery_info" style="@style/setup_wizard_description_text" />
                <Spinner android:entries="@array/security_questions" android:id="@id/security_question_spinner" android:paddingLeft="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/input_field_vmargins" android:minWidth="320.0dip" android:prompt="@string/security_questions_title" android:layout_below="@id/description" android:paddingStart="6.0dip" />
                <EditText android:id="@id/answer_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/input_field_vmargins" android:hint="@string/answer" android:singleLine="true" android:selectAllOnFocus="true" android:layout_below="@id/security_question_spinner" android:inputType="textNoSuggestions" />
                <EditText android:id="@id/secondary_email_edit" android:nextFocusDown="@id/next_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/input_field_vmargins" android:hint="@string/secondary_email_label" android:singleLine="true" android:selectAllOnFocus="true" android:layout_below="@id/answer_edit" android:inputType="textEmailAddress" android:imeOptions="actionDone" />
            </RelativeLayout>
        </com.google.android.gsf.login.BottomScrollView>
        <View style="@style/InputFieldSideView" />
    </LinearLayout>
    <RelativeLayout android:id="@id/buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@id/back_button" android:layout_alignParentLeft="true" android:contentDescription="@string/setup_wizard_back_button_label" android:layout_alignParentStart="true" style="@style/setup_wizard_back_button" />
        <Button android:id="@id/next_button" android:layout_alignParentRight="true" android:contentDescription="@string/setup_wizard_next_button_label" android:layout_alignParentEnd="true" style="@style/setup_wizard_next_button" />
    </RelativeLayout>
</view>