<?xml version="1.0" encoding="utf-8"?>
<view android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.google.android.gsf.login.ProportionalOuterFrame"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="bottom" android:id="@id/title_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:gravity="bottom" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_google_account" style="@style/setup_wizard_title" />
        <View android:id="@id/top_divider" android:layout_below="@id/title" style="@style/setup_wizard_top_divider" />
    </RelativeLayout>
    <com.google.android.gsf.login.BottomScrollView android:id="@id/bottom_scroll_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/next_button" android:layout_below="@id/title_area">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View style="@style/InputFieldSideView" />
                <LinearLayout android:orientation="horizontal" android:layout_marginTop="@dimen/input_field_vmargins" android:layoutDirection="ltr" style="@style/InputFieldView">
                    <EditText android:textAppearance="?android:textAppearanceMedium" android:textSize="20.0sp" android:gravity="left" android:id="@id/username_edit" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/username" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" android:inputType="textNoSuggestions" android:imeOptions="flagForceAscii" />
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="20.0sp" android:id="@id/gmail_host_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/gmail_host_name" android:layout_below="@id/username_edit" android:layout_marginStart="4.0dip" />
                </LinearLayout>
                <View style="@style/InputFieldSideView" />
            </LinearLayout>
            <TextView android:id="@id/message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/create_google_account_text" style="@style/setup_wizard_description_text" />
        </LinearLayout>
    </com.google.android.gsf.login.BottomScrollView>
    <Button android:id="@id/back_button" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/setup_wizard_back_button_label" android:layout_alignParentStart="true" style="@style/setup_wizard_back_button" />
    <Button android:id="@id/next_button" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/setup_wizard_next_button_label" android:layout_alignParentEnd="true" style="@style/setup_wizard_next_button" />
</view>